--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/fantasyui-com/brd#readme",
   "dependencies": {
-    "chickpea": "^1.5.0",
-    "civilized": "^1.0.3"
+    "chickpea": "^1.7.0",
+    "outspoken": "^1.2.0"
   }
 }
